fixed css on mobile

--- a/src/client/components/Image/image.scss
+++ b/src/client/components/Image/image.scss
@@ -2,7 +2,7 @@
 
 .image {
   &.avatar {
-    width: 36px;
+    width: 5vh;
   }
 
   &.result {
