--- a/src/client/containers/StartPage/startPage.scss
+++ b/src/client/containers/StartPage/startPage.scss
@@ -26,6 +26,11 @@
 .button {
   height: 10vh;
 }
+
 .text {
   height: 10vh;
+}
+
+.avatar {
+  height: 4vh;
 }
